@@ -5180,6 +5180,82 @@ return|return
 literal|true
 return|;
 block|}
+comment|/**    * Make file list     */
+DECL|method|makeTmpConfDirFileList
+specifier|private
+name|List
+argument_list|<
+name|File
+argument_list|>
+name|makeTmpConfDirFileList
+parameter_list|(
+name|File
+name|dir
+parameter_list|,
+name|List
+argument_list|<
+name|File
+argument_list|>
+name|fileList
+parameter_list|)
+block|{
+name|File
+index|[]
+name|files
+init|=
+name|dir
+operator|.
+name|listFiles
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|File
+name|file
+range|:
+name|files
+control|)
+block|{
+if|if
+condition|(
+name|file
+operator|.
+name|isFile
+argument_list|()
+condition|)
+block|{
+name|fileList
+operator|.
+name|add
+argument_list|(
+name|file
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|file
+operator|.
+name|isDirectory
+argument_list|()
+condition|)
+block|{
+name|fileList
+operator|=
+name|makeTmpConfDirFileList
+argument_list|(
+name|file
+argument_list|,
+name|fileList
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|fileList
+return|;
+block|}
 comment|/**    * The conf files are copied to the tmp dir to the conf dir. A backup of the old file is maintained    */
 DECL|method|copyTmpConfFiles2Conf
 specifier|private
@@ -5190,6 +5266,11 @@ name|File
 name|tmpconfDir
 parameter_list|)
 block|{
+name|boolean
+name|status
+init|=
+literal|false
+decl_stmt|;
 name|File
 name|confDir
 init|=
@@ -5210,10 +5291,17 @@ control|(
 name|File
 name|file
 range|:
+name|makeTmpConfDirFileList
+argument_list|(
 name|tmpconfDir
-operator|.
-name|listFiles
+argument_list|,
+operator|new
+name|ArrayList
+argument_list|<
+name|File
+argument_list|>
 argument_list|()
+argument_list|)
 control|)
 block|{
 name|File
@@ -5226,10 +5314,78 @@ name|confDir
 argument_list|,
 name|file
 operator|.
-name|getName
+name|getPath
+argument_list|()
+operator|.
+name|substring
+argument_list|(
+name|tmpconfDir
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|length
+argument_list|()
+argument_list|,
+name|file
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|length
 argument_list|()
 argument_list|)
+argument_list|)
 decl_stmt|;
+if|if
+condition|(
+operator|!
+name|oldFile
+operator|.
+name|getParentFile
+argument_list|()
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|status
+operator|=
+name|oldFile
+operator|.
+name|getParentFile
+argument_list|()
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|status
+condition|)
+block|{         }
+else|else
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Unable to mkdirs: "
+operator|+
+name|oldFile
+operator|.
+name|getParentFile
+argument_list|()
+argument_list|)
+throw|;
+block|}
+block|}
 if|if
 condition|(
 name|oldFile
@@ -5244,11 +5400,9 @@ init|=
 operator|new
 name|File
 argument_list|(
-name|confDir
-argument_list|,
 name|oldFile
 operator|.
-name|getName
+name|getPath
 argument_list|()
 operator|+
 literal|"."
@@ -5266,16 +5420,64 @@ argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|boolean
+if|if
+condition|(
+operator|!
+name|backupFile
+operator|.
+name|getParentFile
+argument_list|()
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
 name|status
-init|=
+operator|=
+name|backupFile
+operator|.
+name|getParentFile
+argument_list|()
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|status
+condition|)
+block|{           }
+else|else
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Unable to mkdirs: "
+operator|+
+name|backupFile
+operator|.
+name|getParentFile
+argument_list|()
+argument_list|)
+throw|;
+block|}
+block|}
+name|status
+operator|=
 name|oldFile
 operator|.
 name|renameTo
 argument_list|(
 name|backupFile
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 operator|!
@@ -5303,16 +5505,15 @@ argument_list|)
 throw|;
 block|}
 block|}
-name|boolean
 name|status
-init|=
+operator|=
 name|file
 operator|.
 name|renameTo
 argument_list|(
 name|oldFile
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 name|status
